--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -83,7 +83,7 @@ $linkedin: #0e76a8;
 $github: #333;
 $gitlab: #fca326;
 $google: #ea4335;
-$twitter: #1da1f2;
+$discord: #7289da;
 $medium: #000;
 $stackoverflow: #f48024;
 $instagram: #c13584;
