--- a/src/components/socialMedia/SocialMedia.scss
+++ b/src/components/socialMedia/SocialMedia.scss
@@ -48,8 +48,8 @@
   background-color: $google;
 }
 
-.twitter i {
-  background-color: $twitter;
+.discord i {
+  background-color: $discord;
 }
 
 .medium i {
@@ -69,7 +69,7 @@
 }
 
 /* Hover Transition */
-.twitter i:hover,
+.discord i:hover,
 .google i:hover,
 .gitlab i:hover,
 .github i:hover,
