--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -3,8 +3,8 @@ Certain colors are used for different and multiply types of elements.
 For greater control over colors visit each components .scss file. */
 
 // button colors
-$buttonColor: #920075;
-$buttonHover: #2de2e6; 
+$buttonColor: #f03030;
+$buttonHover: #309eff; 
 $topButtonHover: #000;
 
 // text colors light theme
@@ -45,7 +45,7 @@ $lightBoxShadowDarker: rgba(0, 0, 0, 0.3);
 
 // dark theme box shadows
 $darkBoxShadow: #2de2e6;
-$darkBoxShadow2: #ffffff;
+$darkBoxShadow2: #2de2e6;
 
 // linear gradients
 $experienceCardBlurredDivLG: linear-gradient(
