--- a/src/components/achievementCard/AchievementCard.scss
+++ b/src/components/achievementCard/AchievementCard.scss
@@ -34,7 +34,7 @@
   box-shadow: $lightBoxShadowDark 0px 20px 30px -10px;
 }
 .dark-mode.certificate-card:hover {
-  box-shadow: $achievementCertificateCardHoverDark 0px 20px 30px -10px;
+  box-shadow: $darkBoxShadow 0px 20px 30px -10px;
 }
 .certificate-image-div {
   position: relative;
