--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -45,9 +45,20 @@
   line-height: 40px;
 }
 
+.greeting-image-div{
+  
+}
+
 .greeting-image-div > img {
-  max-width: 100%;
+  max-width: 50%;
   height: auto;
+  box-shadow: 0px 10px 30px 10px $darkBoxShadow;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.25s ease;
+  border-radius: 20px; /* Adjust the radius as needed */
+  border: 2px solid $buttonHover; /* You can change the border width and color */
+  opacity: 0.7;
 }
 
 .wave-emoji {
