--- a/src/containers/skills/Skills.scss
+++ b/src/containers/skills/Skills.scss
@@ -49,6 +49,7 @@
   .skills-text-div {
     margin-left: 0px;
     margin: 20px;
+    flex: 2;
   }
   .skills-text {
     font-size: 16px;
@@ -60,5 +61,6 @@
   .skills-image-div {
     /* display: none; */
     order: 2;
+    flex: 1;
   }
 }
