--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -13,9 +13,6 @@
   margin-top: 2rem;
 }
 
-.greeting-main {
-  display: flex;
-}
 
 .subTitle {
   color: $subTitle !important;
@@ -23,6 +20,8 @@
 
 .greeting-main {
   display: flex;
+  align-items: center;
+  
 }
 
 .greeting-main > * {
@@ -45,7 +44,9 @@
   line-height: 40px;
 }
 
-.greeting-image-div{
+.greeting-image-div{  
+  display: flex;
+  justify-content: center;
   
 }
 
