--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -25,7 +25,7 @@
 }
 
 .greeting-main > * {
-  flex: 1;
+  
   margin-bottom: 30px;
 }
 .button-greeting-div {
@@ -36,6 +36,7 @@
 .greeting-text {
   font-size: 70px;
   line-height: 1.1;
+  flex: 2;
   color: $textColor !important;
 }
 
@@ -47,10 +48,12 @@
 .greeting-image-div{  
   display: flex;
   justify-content: center;
+  margin: 50px;
   
 }
 
 .greeting-image-div > img {
+  flex: 1;
   max-width: 100%;
   height: auto;
   box-shadow: 0px 10px 30px 10px $darkBoxShadow;
@@ -59,6 +62,7 @@
   transition: all 0.25s ease;
   border-radius: 10px; /* Adjust the radius as needed */
   border: 2px solid $buttonHover; /* You can change the border width and color */
+  
   
 }
 
