--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -8,7 +8,7 @@
 /* header */
 
 .dark-menu {
-  background-color: $darkBackground !important;
+  background-color: $darkBackground2 !important;
   color: $textColorDark;
 }
 
@@ -35,7 +35,7 @@
 }
 
 .grey-color {
-  color: $subTitle;
+  color: $secondaryColor;
 }
 
 .header li a {
