Fine tuning padding and minor color fixes

--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -10,6 +10,7 @@ $darkTextColor: #1F1C22;
 $darkTextSecondary: #7e748a;
 $lightTextColor: #D9D7DD;
 $lightTextSecondary: #E0DDE3;
+$darkBackground2: #3f3a45;
 
 
 // button colors
@@ -40,7 +41,7 @@ $lightBackground3: $lightTextSecondary;
 $blogCardContainerColor: $lightTextSecondary;
 // dark background colors
 $darkBackground: $darkTextColor;
-$darkBackground2: $darkTextSecondary;
+//$darkBackground2: $darkTextSecondary;
 
 // light theme box shadows
 $lightBoxShadowDark: $darkTextColor;
