--- a/src/containers/StartupProjects/StartupProjects.scss
+++ b/src/containers/StartupProjects/StartupProjects.scss
@@ -1,5 +1,12 @@
 @import "../../_globalColor";
 
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 15px;
+}
+
 .card-image {
   max-width: 100%;
   height: auto;
@@ -10,7 +17,7 @@
   font-size: 22px;
   line-height: 24px;
   font-weight: 700;
-  margin: 15px 0 0 0;
+  margin: 5px 0 0 0;
 }
 .card-subtitle {
   color: $cardSubtitle;
