--- a/src/containers/education/Education.scss
+++ b/src/containers/education/Education.scss
@@ -7,14 +7,15 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  padding: 20px 0px;
-  margin: 0px auto;
-  margin-top: 2rem;
+  padding: 2px 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 5px;
 }
 
 .education-section > * {
   flex: 1;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .education-card-container {
