--- a/src/components/achievementCard/AchievementCard.scss
+++ b/src/components/achievementCard/AchievementCard.scss
@@ -20,6 +20,7 @@
 
 
 .certificate-card-dark {
+  max-width: 50%;
   background-color: $lightBackground2;
   box-shadow: 0px 10px 30px -15px $darkBoxShadow;
   padding: 1.5rem;
@@ -32,6 +33,7 @@
 
 
 .certificate-card {
+  max-width: 50%;
   background-color: $lightBackground2;
   box-shadow: $lightBoxShadowDark 0px 10px 30px -15px;
   padding: 1.5rem;
