--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -199,7 +199,8 @@
 }
 @media (min-width: 768px) {
   .header {
-    font-size: 0.6em;
+    font-size: calc(0.4em + 0.12vw);
+    white-space: nowrap;
   }
   .menu {
     display: flex;
