--- a/src/containers/achievement/Achievement.scss
+++ b/src/containers/achievement/Achievement.scss
@@ -1,5 +1,12 @@
 @import "../../_globalColor";
 
+.projects-container {
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .main {
   margin-top: 50px;
 }
@@ -11,7 +18,7 @@
   margin: 0px;
 }
 .achievement-subtitle {
-  text-transform: uppercase;
+  
   margin: 0px;
   margin-bottom: 50px;
 }
