--- a/src/containers/education/Education.scss
+++ b/src/containers/education/Education.scss
@@ -7,9 +7,7 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  padding: 2px 0px;
-  margin-left: 50px;
-  margin-right: 50px;
+  padding: 2px 0px 2px 2px;
   margin-top: 5px;
 }
 
