--- a/src/containers/education/Education.scss
+++ b/src/containers/education/Education.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  padding: 10px 30px 10px 30px;
+  margin: 10px 30px 10px 30px;
   margin-top: 5px;
 }
 
